feat: updated ui

--- a/src/main/resources/templates/detail_redesign.html
+++ b/src/main/resources/templates/detail_redesign.html
@@ -54,12 +54,45 @@
                     <circle cx="2" cy="2" r="2" />
                 </svg>
             </a>
-            <a>MEHR
+            <a>KOMMENTARE
                 <svg class="dot" xmlns="http://www.w3.org/2000/svg" width="4" height="4" viewBox="0 0 4 4" fill="none">
                     <circle cx="2" cy="2" r="2" />
                 </svg>
             </a>
         </nav>
+        <section class="description">
+            <p class="grey">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+            </p>
+            </section>
+        <section class="performances">
+            <div class="card">
+                <div class="image" style="background-image: url('../META-INF/resources/media/sg221017196.jpeg');">
+                    <div class="overlay">
+                    <span id="month">Mai</span>
+                    <span id="day">02</span>
+                    <span id="time">19:30</span>
+                </div>
+                </div>
+                    <div class="buttons">
+                        <h2>Premierenvorstellung</h2>
+                        <button>zum Kalender</button> <!--geplant Status setzen-->
+                        <button>als gesehen markieren</button> <!--als gesehen setzen-->
+                        <button>als verpasst markieren</button> <!--als verpasst setzen-->
+                        <button>zum Shop</button> <!--geplant Status setzen-->
+                        <button>Ticket gekauft</button> <!--Ticket gekauft Status setzen-->
+
+                </div>
+            </div>
+        </section>
+        <section class="cast">
+            <p class="grey">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+            </p>
+        </section>
+        <section class="comments">
+            <div class="card">
+                    <p>Das war einfach nur der Wahnsinn!</p>
+                <p class="grey">- Jonas</p>
+        </section>
     </main>
     <footer>
         <nav>
