feat: updated unpoly.css: modals have rounded corners

--- a/src/main/resources/META-INF/resources/css/unpoly.css
+++ b/src/main/resources/META-INF/resources/css/unpoly.css
@@ -182,3 +182,6 @@ up-popup[size=full] up-popup {
 [up-href], [up-clickable] {
   cursor: pointer;
 }
+up-modal-box, up-drawer-box, up-cover-box, up-popup {
+  border-radius: 20px;
+}
