--- a/src/main/resources/templates/detail_redesign.html
+++ b/src/main/resources/templates/detail_redesign.html
@@ -17,7 +17,7 @@
 
 <body>
     <header class="extended" style="background-image: url('../META-INF/resources/media/sg221017196.jpeg');">
-        <div class="overlay">
+        <div class="colored-layer">
         <div class="title"><svg class="icon" width="13" height="21" viewBox="0 0 13 21" xmlns="http://www.w3.org/2000/svg">
             <path d="M0.321857 9.72255L9.22301 0.821857C9.65215 0.392714 10.3483 0.392714 10.7774 0.821857L11.8157 1.86013C12.2444 2.28882 12.2449 2.98314 11.8176 3.41274L4.76304 10.4998L11.8171 17.5873C12.2449 18.0169 12.244 18.7112 11.8153 19.1399L10.777 20.1781C10.3478 20.6073 9.65169 20.6073 9.22255 20.1781L0.321857 11.277C-0.107286 10.8478 -0.107286 10.1517 0.321857 9.72255Z"/>
             </svg> 
@@ -67,7 +67,7 @@
         <section class="performances">
             <div class="card">
                 <div class="image" style="background-image: url('../META-INF/resources/media/sg221017196.jpeg');">
-                    <div class="overlay">
+                    <div class="colored-layer">
                     <span id="month">Mai</span>
                     <span id="day">02</span>
                     <span id="time">19:30</span>
@@ -92,6 +92,7 @@
             <div class="card">
                     <p>Das war einfach nur der Wahnsinn!</p>
                 <p class="grey">- Jonas</p>
+            </div>
         </section>
     </main>
     <footer>
