--- a/src/main/resources/templates/redesign.html
+++ b/src/main/resources/templates/redesign.html
@@ -28,7 +28,7 @@
     <main>
         <a class="card" href="">
                 <div class="image" style="background-image: url('../META-INF/resources/media/sg221017196.jpeg');">
-                    <div class="overlay">
+                    <div class="colored-layer">
                     <span id="month">Mai</span>
                     <span id="day">02</span>
                     <span id="time">19:30</span>
