--- a/src/main/resources/META-INF/resources/css/base.css
+++ b/src/main/resources/META-INF/resources/css/base.css
@@ -125,7 +125,7 @@ main {
     align-items: center;
 }
 /*card for Spielzeiten*/
-.card .image .overlay {
+.card .image .colored-layer {
     width:100%;
     height: 100%;
     background-color: rgba(157, 130, 118, 0.7);
