--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -64,7 +64,7 @@
 
             <div class="buttons">
                 <h2>{#if performance.performanceType}{performance.performanceType}{/if}</h2>
-                <button>zum Kalender</button> <!--geplant Status setzen-->
+                <a rel="noopener noreferrer" target="_blank" href="/mobile/performances/{performance.id}"> <button>zum Kalender</button></a> <!--geplant Status setzen-->
                 <button>als gesehen markieren</button> <!--als gesehen setzen-->
                 <button>als verpasst markieren</button> <!--als verpasst setzen-->
                 <a rel="noopener noreferrer" target="_blank" href="{#if performance.bookingLink}{performance.bookingLink}{/if}"> <button>zum Shop</button></a> <!--geplant Status setzen-->
