--- a/src/main/resources/META-INF/resources/css/stuecke.css
+++ b/src/main/resources/META-INF/resources/css/stuecke.css
@@ -8,6 +8,21 @@ header.standard {
     padding: 8px 8px 8px 16px;
     border-bottom: 1px solid #CCC;
 }
+/* Show More - Stücke & Spielzeiten */
+.showMore {
+    margin: 8px;
+    display: flex;
+    border-radius: 20px;
+    box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.12);
+    justify-content: center;
+    background: #9747FF;
+    align-items: stretch;
+    align-self: stretch;
+}
+.showMore button {
+    width: 100%;
+    height: 100%;
+}
 .overlay {
     display: flex;
     flex-direction: column;
