chore: moved design-files to folder designFiles in resources

--- a/src/main/resources/designFiles/stylesheetv2.css
+++ b/src/main/resources/designFiles/stylesheetv2.css
@@ -70,7 +70,7 @@ header .icon {
     min-width: 25%;
     border-radius: 20px 0px 0px 20px;
     background-size: cover;
-    background-image: url(../media/sg221017196.jpeg);
+    background-image: url(../META-INF/resources/media/sg221017196.jpeg);
     background-color: #9D8276;
     overflow: clip;
     padding-top: 8px;
