feat: added baselayout to login-screen and deins-screen, chore: changed login path and loggedIn Path in application.properties, changed getLoggedIn Page to UserResourceMobile

--- a/src/main/resources/templates/yours.html
+++ b/src/main/resources/templates/yours.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{#include base}
+    {#header}
+<header class="standard">
+    <h1>{#insert title}Default Title{/}</h1>
+</header>
+    {/header}
+{#title}Deins{/title}
+    Hier gibt es noch nichts zu sehen!
+{/include}
