--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,21 +1,20 @@
-    <!DOCTYPE html>
-    <html lang="de">
-    <head>
-        <title>Login</title>
-    </head>
-    <body>
-    <h1>Login</h1>
-    <form action="j_security_check" method="post">
-        <div class="container">
-            <label for="j_username"><b>Username</b></label>
-            <input type="text" placeholder="Enter Username" name="j_username" required>
+    {#include base}
+        {#header}
+            <header class="standard">
+            <h1>{#insert title}Log dich ein!{/}</h1>
+            </header>
+        {/header}
+        {#title}Log dich ein!{/title}
+        <form action="j_security_check" method="post">
+            <div class="container">
+                <label for="j_username"><b>Username</b></label>
+                <input type="text" placeholder="Enter Username" name="j_username" required>
 
-            <label for="j_password"><b>Password</b></label>
-            <input type="password" placeholder="Enter Password" name="j_password" required>
+                <label for="j_password"><b>Password</b></label>
+                <input type="password" placeholder="Enter Password" name="j_password" required>
 
-            <button type="submit">Login</button>
+                <button type="submit">Login</button>
 
-        </div>
-    </form>
-    </body>
-    </html>
+            </div>
+        </form>
+    {/include}
