feat: made ui for register and login more userfriendly

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -5,7 +5,7 @@
 </header>
     {/header}
 {#title}Registriere dich!{/title}
-    <form action="/mobile/register" method="post">
+    <form class="login" action="/mobile/register" method="post">
         <label for="j_username"><b>Benutzername</b></label>
         <input type="text" placeholder="Benutzernamen eingeben" name="username" required>
 
