--- a/src/main/resources/META-INF/resources/css/base.css
+++ b/src/main/resources/META-INF/resources/css/base.css
@@ -80,6 +80,16 @@ main {
 }
 
 /* || Typography */
+/* || Header   */
+header.standard {
+    background-color: #fff;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 8px 8px 8px 16px;
+    border-bottom: 1px solid #CCC;
+}
 /* Card*/
 
 .card {
@@ -165,23 +175,27 @@ button:hover {
     color: #9747FF;
 }
 
-
+.login {
+    display: flex;
+    flex-direction: column;
+}
 /* || Input */
 input {
-    display: block;
+    align-self: stretch;
     padding: 8px 12px;
     border-radius: 20px;
     border: 1px solid #888;
     font-size: 14px;
-    width: 100%;
     box-sizing: border-box;
-    margin-top: 8px;
-    margin-bottom: 8px;
+    margin: 8px;
 }
 
 input:focus {
     outline: none;
     border-color: #9747ff;
+}
+label {
+    margin: 8px;
 }
 /* || Bottom Navigation */
 nav {
