--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,12 +1,12 @@
     {#include base}
+        {#title}Log dich ein!{/title}
         {#header}
             <header class="standard">
             <h1>{#insert title}Log dich ein!{/}</h1>
             </header>
         {/header}
-        {#title}Log dich ein!{/title}
-        <form action="j_security_check" method="post">
-            <div class="container">
+        <form class="login" action="j_security_check" method="post">
+
                 <label for="j_username"><b>Username</b></label>
                 <input type="text" placeholder="Enter Username" name="j_username" required>
 
@@ -14,7 +14,5 @@
                 <input type="password" placeholder="Enter Password" name="j_password" required>
 
                 <button type="submit">Login</button>
-
-            </div>
         </form>
     {/include}
