--- a/src/main/resources/templates/stuecke.html
+++ b/src/main/resources/templates/stuecke.html
@@ -26,7 +26,9 @@
     <div class="basic-info">
         <div>
             <h2>{event.title}</h2>
-            <span id="chip">will hin!</span>
+            <span id="chip"
+                    {#if event.eventState}
+                  { class="{event.eventState.cssClass} " > {event.eventState.getLabel}  {#else} class = "none-state">Nicht gesetzt {/if}</span>
         </div>
         <h3>{#if event.kind}{event.kind}{/if}</h3>
         {#if event.nextPerformance}
