chore: refactored filterterms

--- a/src/main/resources/templates/spielzeiten.html
+++ b/src/main/resources/templates/spielzeiten.html
@@ -50,7 +50,7 @@
     <input type="hidden" name="filter[endDateTime]" value="{queryParameters.endDateTimeFilter}">
     <input type="hidden" name="filter[name]" value="{queryParameters.nameFilter}">
     <input type="hidden" name="filter[status]" value="{queryParameters.statusFilter}">
-    <input type="hidden" name="filter[eventType]" value="{queryParameters.playTypeFilter}">
+    <input type="hidden" name="filter[kind]" value="{queryParameters.kindFilter}">
     <input type="hidden" name="filter[performanceType]" value="{queryParameters.performanceTypeFilter}">
     <input type="hidden" name="include" value="{queryParameters.include}">
 </form>
